--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,7 +17,7 @@
       <header>
         <img id="face" src="{{site.face}}" alt="Face"/>
 
-        <p>
+        <p id="info">
           <span id="name">{{ site.name }}</span>
           <br>
           PhD student, CU Boulder
