--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -184,8 +184,8 @@ footer {
   -webkit-font-smoothing:subpixel-antialiased;
 }
 
-@media print, screen and (max-width: 960px) {
-
+@media print, screen and (max-width: 650px) {
+  // original max-width: 960px
   div.wrapper {
     width:auto;
     margin:0;
@@ -198,7 +198,7 @@ footer {
   }
 
   header {
-    padding-right:320px;
+    // padding-right:320px;
   }
 
   section {
@@ -217,9 +217,8 @@ footer {
     right:50px;
     top:52px;
   }
-}
 
-@media print, screen and (max-width: 720px) {
+  // original max-width: 720px
   body {
     word-wrap:break-word;
   }
