--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -11,13 +11,17 @@
 @font-face {
   font-family: "Lato";
   font-weight: normal;
-  src: url('../fonts/lato/Lato-Regular.ttf') format('truetype');
+  src: url('../fonts/lato/lato-regular-webfont.woff2') format('woff2'),
+       url('../fonts/lato/lato-regular-webfont.woff') format('woff'),
+       url('../fonts/lato/lato-regular-webfont.ttf') format('truetype');
 }
 
 @font-face {
   font-family: "Lato";
   font-weight: bold;
-  src: url('../fonts/lato/Lato-Bold.ttf') format('truetype');
+  src: url('../fonts/lato/lato-bold-webfont.woff2') format('woff2'),
+       url('../fonts/lato/lato-bold-webfont.woff') format('woff'),
+       url('../fonts/lato/lato-bold-webfont.ttf') format('truetype');
 }
 
 $header-width: 125px;
