--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,7 +20,7 @@
         <p id="info">
           <span id="name">{{ site.name }}</span>
           <br>
-          PhD student, CU Boulder
+          PhD student, Michigan
           <br>
           dmoon1221@gmail.com
           <br>
