--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,9 +20,7 @@
         <p id="info">
           <span id="name">{{ site.name }}</span>
           <br>
-          PhD student, Michigan
-          <br>
-          dmoon1221@gmail.com
+          {{site.email}}
           <br>
           <a class="plink" href="https://twitter.com/dm_0ney"><i class="fab fa-twitter"></i></a>
           <a class="plink" href="https://github.com/dmoon1221"><i class="fab fa-github"></i></a>
